--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# api folder
-api/node_modules/
-api/src/db/dev.db
-api/pnpm-lock.yaml
-api/.env
+node_modules/
+src/db/dev.db
+pnpm-lock.yaml
+.env
